<resources>
    <string name="app_name">HAW OE-Rallye</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navName">Dein Name</string>
    <string name="navGruppe">Deine Gruppe</string>
    <string name="navAusloggen">Ausloggen</string>

    <!--Loading Screen-->
    <string name="oeRallyeAppLoad">Lädt...</string>

    <!--Log In-->
    <string name="oeRallyeAppHead">Herzlich willkommen \n bei der OE-Rallye!</string>
    <string name="oeRallyeAppText">Bitte melde dich an.</string>
    <string name="buttonLogin">Einloggen</string>
    <string name="nameFieldPlaceholder">Vorname</string>
    <string name="lastnameFieldPlaceholder">Nachname</string>
    <string-array name="subject_array">
        <item>Studiengang wählen</item>
        <item>Medientechnik</item>
        <item>Media Systems</item>
    </string-array>
    <string name="passwordFieldPlaceholder">Passwort</string>

    <!--Join Group-->
    <string name="joinGroupHead">GRUPPENWAHL</string>
    <string name="joinText">Bitte Wähle deine Gruppe anhand deiner Armbandfarbe.\nWeitere Gruppenmitglieder kannst du im Menü unter \"Deine Gruppe\" hinzufügen.</string>
    <string name="buttonJoinGroup">Fertig</string>
    <string name="single_group">GRUPPE</string>

    <!--Menu-->
    <string name="manual">Anleitung</string>
    <string name="timeTable">Zeiten</string>
    <string name="roomplans">Raumpläne</string>
    <string name="tasks">Aufgaben</string>
    <string name="group">Deine Gruppe</string>
    <string name="credits">Impressum</string>

    <!--fragment_manual-->
    <string name="headline_manual">ANLEITUNG</string>
    <string name="manualText">Um die Gebäude des Departments besser kennenzulernen, habt ihr heute die Aufgabe die Labore und Räumlichkeiten zu erkunden
        und euch durch die Bonusfragen wichtige Punkte zu sichern. Es gibt tolle Preise zu gewinnen. \n
        \nBevor ihr in eure Tour startet solltet ihr euch die Aufgaben genauestens durchlesen und euch schon mal einen neuen Gruppennamen überlegen, welcher am
        Ende mit in den Sieg einberechnet wird, also zeigt eure Kreativität. \n
        \nBeachtet dabei bitte die Zeiten der Labore, solltet ihr sie nämlich verpassen, gehen wertvolle Punkte verloren. \n
        \nBleibt in eurer Gruppe, arbeitet zusammen bis zum Schluss. \n
        \nEure Ergebnisse tragt ihr bitte in die dafür vorgesehenen Felder in der App ein.</string>

    <!--times_fragment-->
    <string name="headline_timetable">LABOR-ZEITEN</string>

    <!--roomplans_fragment-->
    <string name="headline_roomplans">RAUMPLÄNE</string>

    <!--task_fragment-->
    <string name="headline_tasks">AUFGABEN</string>
    <string name="buidling_new">NEUBAU</string>
    <string name="building_old">ALTBAU</string>
    <string name="single_task">AUFGABE</string>
    <string name="example_task_text">Dies ist ein Beispiel-Aufgabentext.</string>
    <string name="answer">ANTWORT</string>
    <string name="submit">ABGEBEN</string>

    <!--group_fragment-->
    <string name="headline_group">DEINE GRUPPE</string>
    <string name="change">ÄNDERN</string>
    <string name="changeName">GRUPPENNAME ÄNDERN</string>
    <string name="changeNameText">Hier könnt ihr euren Gruppennamen ändern.</string>
    <string name="newMemberText">Hier könnt ihr Mitglieder bearbeiten oder hinzufügen.</string>
    <string name="addStudent">PERSON HINZUFÜGEN</string>
    <string-array name="subject_array2">
        <item>Medientechnik</item>
        <item>Media Systems</item>
    </string-array>

    <!--fragment_impressum-->
    <string name="headline_impressum">IMPRESSUM</string>
    <string name="impressumText">Studierendenprojekt der HAW Hamburg \n
        \nCaroline Wolf, Andreas Scholten, Tobias Saladauski \n
        \nVerantwortlich:
        \nOE-Team Medientechnik
        \nHAW Hamburg
        \nFakultät DMI
        \nFinkenau 35
        \n22081 Hamburg
        \n
        \noe@mt.haw-hamburg.de
        \n
        \n
        \nHaftungsausschluss
        \nTrotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Richtigkeit,
        Vollständigkeit und Aktualität unserer App sowie für die Inhalte externer Links.
        Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.
        Diese Erklärung gilt für alle in der App angebrachten Links und für alle Inhalte der Seiten, zu denen Links oder Banner führen.
        \n
        \nDatenschutz
        \nDie Betreiber dieser App nehmen den Schutz Ihrer persönlichen Daten sehr ernst.
        Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.
        Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben und nach Ende der Orientierungseinheit aus der Datenbank gelöscht.
        Wir weisen darauf hin, dass die Datenübertragung im Internet Sicherheitslücken aufweisen kann.
        Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
