<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_icon" />

    <TextView
        android:id="@+id/rallyeHeadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/oeRallyeAppHead"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/rallyeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/oeRallyeAppText"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rallyeHeadline" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_android_user"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/nameFieldPlaceholder"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rallyeText"
        android:autofillHints=".AUTOFILL_HINT_NAME"/>


    <EditText
        android:id="@+id/lastnameET"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_android_user"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/lastnameFieldPlaceholder"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET"
        android:autofillHints=".AUTOFILL_HINT_NAME" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="#11000000"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastnameET">

        <Spinner
            android:id="@+id/MTMS_spinner"
            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/subject_array"
            android:textColor="@color/colorText" />

    </RelativeLayout>

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_lock_icon"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/passwordFieldPlaceholder"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:autofillHints=".AUTOFILL_HINT_PASSWORD" />

    <Button
        android:id="@+id/logInBTN"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buttonshape"
        android:text="@string/buttonLogin"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

</android.support.constraint.ConstraintLayout>